# pixeltable-pgserver

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  cibuildwheel_test.bash  pgserver-example.ipynb  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml  publish-wheels.yml  wheels.yml
pgbuild/: Makefile
src/pgserver/: _commands.py  _utils.py  postgres_server.py  utils.py
src/pixeltable_pgserver/: __init__.py  _build.py  _commands.py  pgexec.py  postgres_server.py  utils.py
src/postgresql/: Makefile  __init__.py  _commands.py  _utils.py  testing.py
src/postgresql/tests/: test_postgresql.py
src/tools/: install_pg.sh  install_prereqs.sh
tests/: test_pgserver.py  test_postgresql.py
