[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools==73.0.1", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixeltable-pgserver"
version = "0.5.0"
description = "Embedded Postgres Server for Pixeltable"
authors = [{ name = "Pixeltable, Inc.", email = "contact@pixeltable.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fasteners>=0.19",
    "platformdirs>=4.0.0",
    "psutil>=5.9.0",
]

[project.urls]
homepage = "https://pixeltable.com/"
repository = "https://github.com/pixeltable/pixeltable-pgserver"
documentation = "https://docs.pixeltable.com/"

[project.optional-dependencies]
dev = [
    "ruff",
    "sysv_ipc",
]
test = [
    "pytest",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2",
    "sqlalchemy-utils",
    "mypy",
    "types-psutil",
    "types-sqlalchemy-utils",
]

[tool.isort]
line_length = 120

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pixeltable_pgserver*"]  # package names should match these glob patterns (["*"] by default)

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && make"
test-extras = "test"
test-command = "bash -x {project}/cibuildwheel_test.bash {project}"

[tool.cibuildwheel.linux]
before-all = "yum install -y readline-devel openssl-devel zlib-devel bison flex perl gcc gcc-c++ make jq clang && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && make"

[tool.cibuildwheel.macos]
# Rust should be available; just source cargo env
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && make"

[tool.cibuildwheel.windows]
# Windows needs special Rust setup
before-all = "choco install rust -y && make"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "C", "I", "N", "B", "A", "ICN", "PYI", "SIM", "TD002", "PL", "RUF"]
ignore = ["PLC0415", "PLR0904", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR2004"]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["pixeltable_pgserver"]

[tool.ruff.format]
quote-style = "single"  # can be "single", "double", or "preserve"
